fixed css behind college.js

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -2,3 +2,10 @@
   /* background: linear-gradient(180deg, #FDFDFD 0%, #FFDFD3 100%); w3c */
   background-color: #CFFFE5;;
 }
+
+.ul-nav{
+  margin: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+}
